# Arduino

./: .gitignore
myalbum/: db.sqlite3  manage.py
myalbum/myalbum/: asgi.py  settings.py  urls.py  wsgi.py
myalbum/photoalbum/: forms.py  models.py  urls.py  views.py
myalbum/photoalbum/migrations/: 0001_initial.py
myalbum/photoalbum/templates/photoalbum/: album_detail.html  album_list.html
raspberry_pi/camera/: camera.py  use_camera.c
raspberry_pi/play_ground/: CMakeLists.txt  facerecog.cpp  facerecog.hpp  use_opencv.cpp
raspberry_pi/play_ground/face_recog/: facerecog.cpp  use_opencv.cpp
raspberry_pi/play_ground/image_diff/: CMakeLists.txt  saizeriya.cpp
sunfounder/: MPU6050_test.c  servo_test.c
sunfounder/1.1.1/: 1.1.1_led_brink.c
sunfounder/1.1.2/: 1.1.2_RGBled_brink.c
sunfounder/1.1.3/: 1.1.3.c
sunfounder/1.1.4/: 1.1.4.c
sunfounder/1.2.1/: 1.2.1.c
sunfounder/3.1.1/: 3.1.1.c
sunfounder/Buzzle/: main.c
sunfounder/spoon/: spoon.c
